--- a/src/markdown-doc.fsproj
+++ b/src/markdown-doc.fsproj
@@ -7,13 +7,13 @@
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>16f5b0c5-c247-42de-9772-a40e31b42d8f</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>pandoc_output</RootNamespace>
-    <AssemblyName>pandoc_output</AssemblyName>
+    <RootNamespace>markdown_doc</RootNamespace>
+    <AssemblyName>markdown_doc</AssemblyName>
     <UseStandardResourceNames>true</UseStandardResourceNames>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <TargetFSharpCoreVersion>4.4.3.0</TargetFSharpCoreVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <Name>pandoc-output</Name>
+    <Name>markdown-doc</Name>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -52,14 +52,13 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
-    <Compile Include="PandocOutput\Internal\Common.fs" />
-    <Compile Include="PandocOutput\Internal\FormatCombinators.fs" />
-    <Compile Include="PandocOutput\Internal\SimpleText.fs" />
-    <Compile Include="PandocOutput\Internal\Tile.fs" />
-    <Compile Include="PandocOutput\Internal\TileDoc.fs" />
-    <Compile Include="PandocOutput\MarkdownOld.fs" />
-    <Compile Include="PandocOutput\GridTableOld.fs" />
-    <Compile Include="PandocOutput\Markdown.fs" />
+    <Compile Include="MarkdownDoc\Internal\Common.fs" />
+    <Compile Include="MarkdownDoc\Internal\FormatCombinators.fs" />
+    <Compile Include="MarkdownDoc\Internal\SimpleText.fs" />
+    <Compile Include="MarkdownDoc\Internal\Tile.fs" />
+    <Compile Include="MarkdownDoc\Internal\TileDoc.fs" />
+    <Compile Include="MarkdownDoc\MarkdownOld.fs" />
+    <Compile Include="MarkdownDoc\Markdown.fs" />
     <None Include="Test01.fsx" />
     <None Include="Test02.fsx" />
     <None Include="TestTileDoc.fsx" />
