--- a/test/markdown-doc-test.fsproj
+++ b/test/markdown-doc-test.fsproj
@@ -44,6 +44,7 @@
     <Compile Include="AssemblyInfo.fs" />
     <None Include="Test01.fsx" />
     <None Include="TestOld.fsx" />
+    <None Include="Coversheet.fsx" />
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
