PandocInvoke - renamed Option, Format and Extenstion to PandocOption, PandocFormat and PandocExtension. Option was a name clash with .NET anyway, but the longer prefixed names are better for API users as they don't steal useful generic names.

--- a/test/markdown-doc-test.fsproj
+++ b/test/markdown-doc-test.fsproj
@@ -8,7 +8,7 @@
     <ProjectGuid>4d529f40-8e6c-4c95-82b5-5a9196a85fbf</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>markdown_doc_test</RootNamespace>
-    <AssemblyName>markdown_doc_test</AssemblyName>
+    <AssemblyName>MarkdownDocTest</AssemblyName>
     <UseStandardResourceNames>true</UseStandardResourceNames>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
