--- a/test/MarkdownDocTest.fsproj
+++ b/test/MarkdownDocTest.fsproj
@@ -10,4 +10,12 @@
     <None Include="EDMCoversheet.fsx" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FSharp.Data" Version="3.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\src\MarkdownDoc.fsproj" />
+  </ItemGroup>
+
 </Project>
