--- a/test-proprietary/MarkdownDocTestProprietary.fsproj
+++ b/test-proprietary/MarkdownDocTestProprietary.fsproj
@@ -5,11 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="Test01.fsx" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="FSharp.Data" Version="3.0.0" />
+    <None Include="PBCoversheet.fsx" />
+    <None Include="EDMCoversheet.fsx" />
   </ItemGroup>
 
   <ItemGroup>
