--- a/src/MarkdownDoc.fsproj
+++ b/src/MarkdownDoc.fsproj
@@ -7,8 +7,8 @@
 
   <ItemGroup>
     <Compile Include="MarkdownDoc\Internal\Common.fs" />
-    <Compile Include="MarkdownDoc\Internal\SimpleText.fs" />
-    <Compile Include="MarkdownDoc\Internal\Tile.fs" />
+    <Compile Include="MarkdownDoc\Internal\MarkdownText.fs" />
+    <Compile Include="MarkdownDoc\Internal\MarkdownTile.fs" />
     <Compile Include="MarkdownDoc\Markdown.fs" />
     <Compile Include="MarkdownDoc\Pandoc\Extra.fs" />
     <Compile Include="MarkdownDoc\Pandoc\Invoke.fs" />
