--- a/test-proprietary/MarkdownDocTestProprietary.fsproj
+++ b/test-proprietary/MarkdownDocTestProprietary.fsproj
@@ -10,6 +10,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FSharp.Data" Version="3.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\src\MarkdownDoc.fsproj" />
   </ItemGroup>
 
