Work towards representing markdown internally with an abstract syntax tree, and then rendering in a single phase. With the existing implementation certain elements (specifically tables) are rendered at 'call time' and stored as strings. We want to move to have all rendering in a single phase.

--- a/src/MarkdownDoc.fsproj
+++ b/src/MarkdownDoc.fsproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="MarkdownDoc\Internal\Syntax.fs" />
     <Compile Include="MarkdownDoc\Internal\Common.fs" />
     <Compile Include="MarkdownDoc\Internal\MarkdownText.fs" />
     <Compile Include="MarkdownDoc\Internal\MarkdownTile.fs" />
