--- a/test/MarkdownDocTest.fsproj
+++ b/test/MarkdownDocTest.fsproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <None Include="Test01.fsx" />
     <None Include="TestDoc.fsx" />
+    <None Include="Working.fsx" />
   </ItemGroup>
 
   <ItemGroup>
