--- a/test/MarkdownDocTest.fsproj
+++ b/test/MarkdownDocTest.fsproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <None Include="Test01.fsx" />
+    <None Include="Test02.fsx" />
     <None Include="TestDoc.fsx" />
     <None Include="Working.fsx" />
   </ItemGroup>
