Changed namespace and folder organization so there is MarkdownDoc.Markdown where the main (non Pandoc specific) combinators are located.

--- a/src/MarkdownDoc.fsproj
+++ b/src/MarkdownDoc.fsproj
@@ -13,7 +13,8 @@
   <ItemGroup>
     <Compile Include="MarkdownDoc\Internal\Common.fs" />
     <Compile Include="MarkdownDoc\Internal\Syntax.fs" />
-    <Compile Include="MarkdownDoc\Markdown.fs" />
+    <Compile Include="MarkdownDoc\Markdown\Markdown.fs" />
+    <Compile Include="MarkdownDoc\Markdown\Table.fs" />
     <Compile Include="MarkdownDoc\Pandoc\Extra.fs" />
     <Compile Include="MarkdownDoc\Pandoc\Invoke.fs" />
   </ItemGroup>
