--- a/src/MarkdownDoc.fsproj
+++ b/src/MarkdownDoc.fsproj
@@ -5,9 +5,11 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <AssemblyVersion>1.0.1.0</AssemblyVersion>
     <FileVersion>1.0.1.0</FileVersion>
-    <Version>1.0.1-alpha-20190716d</Version>
+    <Version>1.0.1-alpha-20190721</Version>
     <Description>Combinator library for generating Markdown output. Pandoc biased.</Description>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <Copyright>Stephen Tetley</Copyright>
+    <PackageProjectUrl>https://github.com/stephentetley/markdown-doc</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
@@ -20,14 +22,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="SLFormat" Version="1.0.2-alpha-20190712" />
-  </ItemGroup>
-
-  <ItemGroup>
     <None Include="..\LICENSE">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="SLFormat" Version="1.0.2-alpha-20190721" />
   </ItemGroup>
 
 </Project>
