--- a/src/MarkdownDoc.fsproj
+++ b/src/MarkdownDoc.fsproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <Compile Include="MarkdownDoc\Internal\Common.fs" />
+    <Compile Include="MarkdownDoc\Internal\SimpleDoc.fs" />
     <Compile Include="MarkdownDoc\Internal\Syntax.fs" />
     <Compile Include="MarkdownDoc\Markdown\Markdown.fs" />
     <Compile Include="MarkdownDoc\Markdown\Table.fs" />
