--- a/src/MarkdownDoc.fsproj
+++ b/src/MarkdownDoc.fsproj
@@ -16,6 +16,7 @@
     <Compile Include="MarkdownDoc\Internal\Common.fs" />
     <Compile Include="MarkdownDoc\Internal\GridTable.fs" />
     <Compile Include="MarkdownDoc\Internal\SimpleDoc.fs" />
+    <Compile Include="MarkdownDoc\Internal\Doc.fs" />
     <Compile Include="MarkdownDoc\Internal\Syntax.fs" />
     <Compile Include="MarkdownDoc\Markdown\Markdown.fs" />
     <Compile Include="MarkdownDoc\Markdown\Table.fs" />
