Swapping 'higher level' code to use the new two-level syntax of MdText and MdBlock.

--- a/src/MarkdownDoc.fsproj
+++ b/src/MarkdownDoc.fsproj
@@ -18,7 +18,7 @@
     <Compile Include="MarkdownDoc\Internal\SimpleDoc.fs" />
     <Compile Include="MarkdownDoc\Internal\Doc.fs" />
     <Compile Include="MarkdownDoc\Internal\Syntax.fs" />
-    <Compile Include="MarkdownDoc\Markdown\Markdown.fs" />
+    <Compile Include="MarkdownDoc\Markdown\OldMarkdown.fs" />
     <Compile Include="MarkdownDoc\Markdown\Text.fs" />
     <Compile Include="MarkdownDoc\Markdown\Block.fs" />
     <Compile Include="MarkdownDoc\Markdown\Table.fs" />
