Improvement to htmlElement so iter works better under line breaking.

--- a/src/MarkdownDoc.fsproj
+++ b/src/MarkdownDoc.fsproj
@@ -23,7 +23,7 @@
     <Compile Include="MarkdownDoc\Markdown\Block.fs" />
     <Compile Include="MarkdownDoc\Markdown\Table.fs" />
     <Compile Include="MarkdownDoc\Extra\InlineHtml.fs" />
-    <Compile Include="MarkdownDoc\Extra\CssColours.fs" />
+    <Compile Include="MarkdownDoc\Extra\CssColors.fs" />
     <Compile Include="MarkdownDoc\Extra\RoseTree.fs" />
     <Compile Include="MarkdownDoc\Pandoc\Extra.fs" />
     <Compile Include="MarkdownDoc\Pandoc\Invoke.fs" />
